# Alerta-de-Campeonatos-WCA

./: .deepsource.toml  .example.env  .gitignore  LICENSE  README-pt.md  README.md  client_secret.json.model  dados.py  go.mod  go.sum  main.go  main.py  pyproject.toml  recipient.py  refactored.py  requirements.txt
.github/workflows/: check_code.yml  main.yml  run_check.yml
email/: email_test.go  send_emails.go
email/template/: email-en.html  email-pt.html
gspread/: credentials.go  gspread_test.go  recipients.go  spreaddata.go
resume/: resume.go
side_projects/: .example.env  README.md  main.go  secret.model.json
side_projects/notification/: notification.go
side_projects/sendmelog/: sendmelog.go
side_projects/update_gists/: update_gists.py
side_projects/updategists/: updategists.go
wca/: upcoming_comps.go  wca_test.go
