[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Luis Felipe <luisfelipesdn12@gmail.com>"]
description = "Um script que manda um e-mail quando hรก um campeonato novo na WCA."
name = "Alerta-de-Campeonatos-WCA"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
bs4 = "^0.0.1"
Unidecode = "^1.1"
[tool.poetry.dev-dependencies]
